Revert "refractor person BE"
This reverts commit cd96373cbf030a060fedb1ef43402659c0d5d230.